pretty finalized css version

--- a/solution-hw1/hw1.css
+++ b/solution-hw1/hw1.css
@@ -1,3 +1,7 @@
+body {
+    font-family: sans-serif;
+}
+
 #logo > img{
     width: 40%;
     height: 40%;
@@ -13,37 +17,23 @@
     border: 3px solid black;
  
 }
-#explanation > p 
-{
+#explanation > p {
     display: inline-block;
     text-align: left;
 }
-.dropbtn {
-    background-color: white;
-    color: black;
-    padding: 16px;
-    padding-right: 100px;
-    font-size: 16px;
-    border:2px solid black;
-}
-.dropdown {
-    position: relative;
+#KeepOriginal {
     display: block;
 }
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
+#price {
+    margin-right: 10px;
+    display: inline-block;
 }
-.dropdown-content li {
+#AddCart {
+    border: 2px solid black;
     color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-
+    background-color: yellow;
+    margin-left: 10px;
+}
 .divider{
     border-top: 4px solid black;
     padding-top: 30px;
