--- a/solution-hw1/hw1.css
+++ b/solution-hw1/hw1.css
@@ -1,7 +1,3 @@
-body {
-    font-family: sans-serif;
-}
-
 #logo > img{
     width: 40%;
     height: 40%;
@@ -12,8 +8,8 @@ body {
     align-content: center;
 }
 #roll > img {
-    width: 50%;
-    height: 50%;
+    width: 15%;
+    height: 15%;
     border: 3px solid black;
  
 }
@@ -37,4 +33,15 @@ body {
 .divider{
     border-top: 4px solid black;
     padding-top: 30px;
+}
+.divider2{
+    border-top: 4px solid black;
+    padding-top: 30px;
+    max-block-size: 800px;
+}
+body {
+    font-family: sans-serif;
+}
+h5 {
+    text-decoration: underline;
 }
