setting up for homework submission

--- a/solution-hw1/hw1.css
+++ b/solution-hw1/hw1.css
@@ -81,3 +81,8 @@ body {
 h5 {
     text-decoration: underline;
 }
+a {
+    color: black;
+    background-color: none;
+    text-decoration: none;
+}
