--- a/solution-hw1/hw1.css
+++ b/solution-hw1/hw1.css
@@ -15,7 +15,12 @@
     width: 15%;
     height: 15%;
     border: 3px solid black;
- 
+}
+#enlargedRoll > img {
+    width: 60%;
+    height: 60%;
+    border: 3px solid black;
+
 }
 #explanation {
     display: inline-block;
