--- a/solution-hw1/hw1.css
+++ b/solution-hw1/hw1.css
@@ -1,6 +1,16 @@
+#topPortion {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+#topLeftPortion {
+    display: flex;
+    align-items: center;
+    text-align: right;
+}
 #logo > img{
-    width: 30%;
-    height: 30%;
+    width: 100%;
+    height: 100%;
 }
 .productName {
     font-size: 40px;
@@ -73,14 +83,12 @@
     padding-bottom: 6px;
 }
 .divider{
-    border-top: 4px solid black;
-    padding-top: 30px;
+    border-bottom: 4px solid black;
 }
 .divider2{
     display: block;
     margin: 0px auto 0px auto;
     border-top: 3px solid black;
-    padding-top: 30px;
     width:  50%;
 }
 body {
