--- a/solution-hw1/hw1.css
+++ b/solution-hw1/hw1.css
@@ -15,6 +15,8 @@
 .productName {
     font-size: 40px;
     margin-top: 60px;
+    padding-top: 50px;
+    border-top: 3px black solid;
 }
 #body-text {
     display: block;
@@ -83,7 +85,7 @@
     padding-bottom: 6px;
 }
 .divider{
-    border-bottom: 4px solid black;
+    padding-right: 30px;
 }
 .divider2{
     display: block;
