--- a/solution-hw1/hw1.css
+++ b/solution-hw1/hw1.css
@@ -1,72 +1,109 @@
 #topPortion {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    
+}
+#navTexts {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
 }
 #topLeftPortion {
     display: flex;
-    align-items: center;
     text-align: right;
+    justify-content: flex-end;
+    padding-bottom: 30px;
+    margin-right: 20px;
 }
 #logo > img{
-    width: 100%;
-    height: 100%;
+    width: 450px;
+    height: 450px;
 }
-.productName {
+#pagetitle {
+    text-align: left;
     font-size: 40px;
-    margin-top: 60px;
     padding-top: 50px;
-    border-top: 3px black solid;
+    border-top: 6px black solid;
 }
 #body-text {
-    display: block;
-    text-align: center;
-    align-content: center;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+#body-textCart {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start
 }
 #roll > img {
-    width: 15%;
-    height: 15%;
+    width: 300px;
+    height: 300px;
     border: 3px solid black;
 }
 #enlargedRoll > img {
-    width: 60%;
-    height: 60%;
+    width: 700px;
+    height: 700px;
     border: 3px solid black;
-
+}
+#DetailContent {
+    display: flex;
+    flex-direction: column;
+}
+#cartItems {
+    display: flex;
+    width: 100%;
+    align-items: center;
+}
+#cartExplanation {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
 }
 #explanation {
     display: inline-block;
     text-align: left;
 }
-.description {
+#description {
     display: flex;
     text-align: left;
     align-items: center;
     flex-direction: column;
-    font-size: large;
+    font-size: x-large;
 }
-.choices {
+#choices {
     display: inline-block;
     align-content: left;
     text-align: left;
-    margin-right: 60px;
-    font-size: large;
+    font-size: x-large;
+    margin-top: 140px;
+    margin-bottom: 40px;
 }
-.seconddropbox {
-    margin-top: 20px;
-    margin-bottom: 30px;
+#seconddropbox {
+    margin-bottom: 140px;
 }
 #KeepOriginal {
     display: block;
-   
+    font-size: x-large;
+    width: 100%;
 }
 #packSize {
     display: block;
+    font-size: x-large;
+    width: 100%;
+}
+#KeepOriginalbox {
+    border: 3px black solid;
+}
+#packSizebox {
+    border: 3px black solid;
 }
 #footer {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
+    font-size: x-large;
 }
 #price {
     margin-right: 10px;
@@ -83,6 +120,7 @@
     padding-right: 12px;
     padding-top: 6px;
     padding-bottom: 6px;
+    font-size: large;
 }
 .divider{
     padding-right: 30px;
@@ -106,5 +144,8 @@ a {
     color: black;
     background-color: none;
     text-decoration: none;
+}
+label {
+    border: none;
 }
 
