--- a/solution-hw4 copy/css/hw5.css
+++ b/solution-hw4 copy/css/hw5.css
@@ -38,7 +38,7 @@
     margin-right: none;
     align-content: right;
 }
-#roll > img {
+#roll-image {
     width: 300px;
     height: 300px;
     border: 3px solid black;
@@ -52,7 +52,7 @@
     display: flex;
     flex-direction: column;
 }
-.cartItems {
+.rollItem {
     display: flex;
     width: 100%;
     align-items: center;
