--- a/solution-hw4 copy/css/hw5.css
+++ b/solution-hw4 copy/css/hw5.css
@@ -38,7 +38,7 @@
     margin-right: none;
     align-content: right;
 }
-#roll-image {
+#roll > img {
     width: 300px;
     height: 300px;
     border: 3px solid black;
